--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     <div id="react-app"></div>
     <div id="vue-app"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
