move things around

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Remix Router Playground</title>
+    <title>Remix Router Vue Playground</title>
   </head>
   <body>
-    <div id="react-app"></div>
-    <div id="vue-app"></div>
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
