--- a/packages/vue/example/index.html
+++ b/packages/vue/example/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Remix Router Vue Playground</title>
+    <link rel="stylesheet" href="/src/main.css" />
   </head>
   <body>
     <div id="app"></div>
